--- a/examples/calculator/makefile
+++ b/examples/calculator/makefile
@@ -1,11 +1,8 @@
 CC=gcc
 CFLAGS=-I .
-DEPS = calc.h,../../core/module.h,../../lib/lll/LinkedList.h,../../lib/lll/LinkedList.h
 
-%.o: %.c $(DEPS)
-	$(CC) -c -fPIC %.c $(CFLAGS)
-
-calc.so: calc.o calcModule.o ../../lib/lll/LinkedList.o
+make:
+	$(CC) -c -fPIC calc.c $(CFLAGS)
+	$(CC) -c -fPIC calcModule.c $(CFLAGS)
 	$(CC) -shared -o calc.so calc.o calcModule.o ../../lib/lll/LinkedList.o $(CFLAGS)
 
-make: calc.so
