fixed unload issue

--- a/examples/cli/makefile
+++ b/examples/cli/makefile
@@ -1,8 +1,8 @@
 CC=gcc
-CFLAGS=-I .
+CFLAGS=-I . -g
 
 make:
 	$(CC) -c -fPIC cli.c $(CFLAGS)
 	$(CC) -c -fPIC cliModule.c $(CFLAGS)
-	$(CC) -shared -o cli.so cli.o cliModule.o ../../lib/lll/LinkedList.o $(CFLAGS)
+	$(CC) -shared -o cli.so cli.o cliModule.o ../../lib/linkedListLibrary/LinkedList.o $(CFLAGS)
 
