updated to new version of linked list library

--- a/src/makefile
+++ b/src/makefile
@@ -1,6 +1,6 @@
 CC=gcc
 CFLAGS=-I . -g
-CLIBS=-ldl
+CLIBS=-ldl -lpthread
 
 LIB=../lib
 OBJ=../obj
@@ -11,5 +11,9 @@ DEPS=core.o libraryHandler.o moduleHandler.o interfaceHandler.o
 	$(CC) -c -o $(OBJ)/$@ $< $(CFLAGS)
 
 make: $(DEPS)
-	$(CC) -o $(OBJ)/talon.bin $(OBJ)/core.o $(OBJ)/libraryHandler.o $(OBJ)/moduleHandler.o $(OBJ)/interfaceHandler.o $(LIB)/runtimeLinkingLibrary/obj/runtimeLinking.o $(LIB)/linkedListLibrary/obj/linkedList.o $(CLIBS) $(CFLAGS)
+	$(CC) -o $(OBJ)/talon.bin $(OBJ)/core.o $(OBJ)/libraryHandler.o $(OBJ)/moduleHandler.o $(OBJ)/interfaceHandler.o \
+$(LIB)/runtimeLinkingLibrary/obj/runtimeLinking.o \
+$(LIB)/linkedListLibrary/obj/linkedList.o \
+$(LIB)/threadingProcessingLibrary/obj/threadingProcessingLibrary.o \
+$(CLIBS) $(CFLAGS)
 
