--- a/src/makefile
+++ b/src/makefile
@@ -1,9 +1,10 @@
 CC=gcc
-CFLAGS=-I . -g
+CFLAGS=-I . -g -Wall
 CLIBS=-ldl -lpthread
 
 LIB=../lib
 OBJ=../obj
+MDS=../modules
 
 DEPS=core.o libraryHandler.o moduleHandler.o interfaceHandler.o
 
@@ -12,6 +13,7 @@ DEPS=core.o libraryHandler.o moduleHandler.o interfaceHandler.o
 
 make: $(DEPS)
 	$(CC) -o $(OBJ)/talon.bin $(OBJ)/core.o $(OBJ)/libraryHandler.o $(OBJ)/moduleHandler.o $(OBJ)/interfaceHandler.o \
+$(MDS)/coreApi/obj/coreApiModule.o \
 $(LIB)/runtimeLinkingLibrary/obj/runtimeLinking.o \
 $(LIB)/linkedListLibrary/obj/linkedList.o \
 $(LIB)/threadingProcessingLibrary/obj/threadingProcessingLibrary.o \
