--- a/src/makefile
+++ b/src/makefile
@@ -6,7 +6,7 @@ LIB=../lib
 OBJ=../obj
 MDS=../modules
 
-DEPS=core.o libraryHandler.o moduleHandler.o interfaceHandler.o 
+DEPS=core.o libraryHandler.o moduleHandler.o interfaceHandler.o
 
 %.o: %.c
 	$(CC) -c -o $(OBJ)/$@ $< $(CFLAGS)
@@ -15,6 +15,7 @@ make: $(DEPS) modules
 	$(CC) -o $(OBJ)/talon.bin \
 $(OBJ)/core.o $(OBJ)/libraryHandler.o $(OBJ)/moduleHandler.o $(OBJ)/interfaceHandler.o \
 $(MDS)/coreApi/obj/coreApiModule.o \
+$(MDS)/coreApi/obj/coreApi.o \
 $(LIB)/runtimeLinkingLibrary/obj/runtimeLinking.o \
 $(LIB)/linkedListLibrary/obj/linkedList.o \
 $(LIB)/threadingProcessingLibrary/obj/threadingProcessingLibrary.o \
@@ -22,3 +23,4 @@ $(CLIBS) $(CFLAGS)
 
 modules:
 	$(CC) -c -o $(MDS)/coreApi/obj/coreApiModule.o $(MDS)/coreApi/src/coreApiModule.c $(CFLAGS)
+	$(CC) -c -o $(MDS)/coreApi/obj/coreApi.o $(MDS)/coreApi/src/coreApi.c $(CFLAGS)
