core api modules and core cli logging

--- a/src/makefile
+++ b/src/makefile
@@ -16,6 +16,7 @@ make: $(DEPS) modules
 $(OBJ)/core.o $(OBJ)/libraryHandler.o $(OBJ)/moduleHandler.o $(OBJ)/interfaceHandler.o \
 $(MDS)/coreApi/obj/coreApiModule.o \
 $(MDS)/coreApi/obj/coreApi.o \
+$(MDS)/coreApi/obj/logging.o \
 $(LIB)/runtimeLinkingLibrary/obj/runtimeLinking.o \
 $(LIB)/linkedListLibrary/obj/linkedList.o \
 $(LIB)/threadingProcessingLibrary/obj/threadingProcessingLibrary.o \
@@ -24,3 +25,4 @@ $(CLIBS) $(CFLAGS)
 modules:
 	$(CC) -c -o $(MDS)/coreApi/obj/coreApiModule.o $(MDS)/coreApi/src/coreApiModule.c $(CFLAGS)
 	$(CC) -c -o $(MDS)/coreApi/obj/coreApi.o $(MDS)/coreApi/src/coreApi.c $(CFLAGS)
+	$(CC) -c -o $(MDS)/coreApi/obj/logging.o $(MDS)/coreApi/src/logging.c $(CFLAGS)
